--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -119,125 +119,5 @@
 
 
 </body>
-<script>
-// 获取token
-function getToken(){
-    var token = sessionStorage.getItem("token");
-    $('#authToken').val(token);
-}
-getToken();
-// 隐藏空白头像
-$('#icon-image').hide();
-// 上传头像
-$('#icon').change(function(e){
-    var path = $(this).val(),
-    extStart = path.lastIndexOf('.'),
-    ext = path.substring(extStart,path.length).toUpperCase();
-    console.log(path);
-    if(ext !== null){
-        //判断图片格式
-        if(ext !== '.PNG' && ext !== '.JPG' && ext !== '.JPEG' && ext !== '.GIF'){
-          alert('请上传正确格式的图片');
-          $('#icon-image').hide();
-          return false;
-        }
-        //获取图片大小，注意使用this，而不是$(this)
-        var size = this.files[0].size / 1024;
-        if(size > 10240){
-          alert('图片大小不能超过10M');
-          return false;
-        }
-        var imgBox = e.target;
-        uploadImg(imgBox) 
-    }
-});
-//上传图片时调用的接口
-function uploadImg(tag) {
-    var file = tag.files[0];
-    var imgSrc;
-    if (!/image\/\w+/.test(file.type)) {
-        alert("看清楚，这个需要图片！");
-        return false;
-    }
-    var reader = new FileReader();
-    reader.readAsDataURL(file);
-    reader.onload = function() {
-        imgSrc = this.result;
-        $("#icon-image").find("img").attr({"src": imgSrc});
-    };
-    // 显示头像
-    $('#icon-image').show();
-}
-// 获取公司
-$.ajax({
-    type: "GET",
-    url: APP_URL + "/companySelect",
-    data: {
-    authToken: token
-    },
-    dataType: "json",
-    success: function (res) {
-        console.log('companyList',res);
-        var data = res.data;
-        var str = "<option value='' selected>---请选择公司---</option>";
-    $.each(data, function (index, val) {
-        str += `
-            <option value="${val.id}">${val.companyname}</option>
-        `;
-        });
-        // console.log('str',str)
-        $("#company").html(str);
-    }
-});
-// 获取部门
-$("#company").change(function(){
-    var companyId = $('#company option:selected').val();
-    $.ajax({
-        type: "GET",
-        url: APP_URL + "/departmentSelect",
-        data: {
-        authToken: token,
-        companyId: companyId
-        },
-        dataType: "json",
-        success: function (res) {
-            console.log('departmentList',res);
-            var data = res.data;
-            var str = "<option value='' selected>---请选择部门---</option>";
-        $.each(data, function (index, val) {
-            str += `
-                <option value="${val.id}">${val.departname}</option>
-            `;
-            });
-            // console.log('str',str)
-            $("#department").html(str);
-        }
-    });
-})
-//点击添加用户,提交表单 
-// $("#saveButton").click(function(){
-//     alert('baocun')
-//     // $.ajax({
-//     //     type: "GET",
-//     //     url: APP_URL + "/register",
-//     //     data: {
-//     //     authToken: token,
-//     //     company:
-//     //     },
-//     //     dataType: "json",
-//     //     success: function (res) {
-//     //         console.log('departmentList',res);
-//     //         var data = res.data;
-//     //         var str = "<option value='' selected>---请选择部门---</option>";
-//     //     $.each(data, function (index, val) {
-//     //         str += `
-//     //             <option value="${val.id}">${val.departname}</option>
-//     //         `;
-//     //         });
-//     //         // console.log('str',str)
-//     //         $("#department").html(str);
-//     //     }
-//     // });
-// })
-</script>
+<script type="text/javascript" src="./addUser.js"></script>
 </html>
