--- a/pages/PersonnelManage/index.html
+++ b/pages/PersonnelManage/index.html
@@ -16,7 +16,7 @@
 <div>
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('Rule')"><i class="fas fa-trash-alt"></i> 删除</button>
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('addRule')"><i class="fas fa-edit"></i> 修改</button>
-<button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addRule')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
+<button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddPersonnel/index.html')"><iclass="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
 <div class="form-group">
 <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入关键词进行搜索">
