--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="add-box">
-        <form class="addForm ajax-fadein" id="form1" name="form1" method="post" action="http://hande.icpnt.com/register">
+        <form class="addForm ajax-fadein" id="form1" name="form1" >
             <input name="authToken" type="hidden" id="authToken" value="">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
@@ -106,7 +106,7 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
-                            <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check"
+                            <button type="button" class="btn btn-success" id="saveButton"><i class="fa fa-check"
                                     aria-hidden="true"></i> 添加</button>
                             <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
                                     aria-hidden="true"></i> 取消</button>
