--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -11,12 +11,6 @@
 </head>
 
 <body>
-    <!--alert弹窗Start  -->
-    <div id="top-alert" class="fixed alert alert-error" style="display:none;">
-        <button class="close fixed" style="margin-top: 4px;">×</button>
-        <div class="alert-content">这是内容</div>
-    </div>
-    <!--alert弹窗end  -->
     <nav class="navbar navbar-default" role="navigation">
         <div class="navbar-header">
             <a class="navbar-brand" href="#"><i class="fa fa-plus" aria-hidden="true"></i> <span id="changeTitle">添加</span>公司管理</a>
@@ -24,25 +18,22 @@
     </nav>
 
     <div class="add-box">
-        <form class="addForm ajax-fadein" id="form1" name="form1">
-            <input name="authToken" type="hidden" id="authToken" value="">
+        <form class="addForm" id="form1" name="form1" action="">
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
                         <td align="center">账号</td>
-                        <td><input type="text" name="account" id="company_account" value="" class="form-control" datatype="*" nullmsg="请输入帐号" placeholder="请输入帐号"></td>
+                        <td><input type="text" name="account" ajaxurl="" id="company_account" value="" class="form-control" datatype="*" nullmsg="请输入帐号" placeholder="请输入帐号"></td>
                     </tr>
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="password" name="password" id="company_password" value="" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间！" nullmsg="请输入密码" placeholder="请输入密码"></td>
+                        <td><input type="password" name="password" id="company_password" value="" class="form-control" datatype="*" nullmsg="请输入密码" placeholder="请输入密码"></td>
                     </tr>
 
                     <tr>
                         <td align="center">公司名称</td>
-                        <td>
-                                <input type="text" name="companyname " id="company_name" value="" class="form-control" datatype="*1-50" errormsg="最多填写50个字符串" nullmsg="请输入公司名称" placeholder="请输入公司名称">
-                        </td>
+                        <td><input type="text" name="companyname" id="company_name" value="" class="form-control" datatype="*1-50" errormsg="最多填写50个字符串" nullmsg="请输入公司名称" placeholder="请输入公司名称"></td>
                     </tr>
 
                     <tr>
@@ -52,10 +43,11 @@
                     <tr>
                         <td align="center">联系人方式</td>
                         <td colspan="4" style="padding-top:8px;" id="addTelText">
+                            <input type="hidden" name="phones" id="formPhones" value="">
                             <ul>
                                 <li class="pro-section">
                                     <div class="input-group">
-                                        <input type="text" class="form-control" name="phones[]" value="" id="attrPhone" placeholder="请输入电话号码">
+                                        <input type="text" class="form-control formPhone" value="" id="attrPhone" placeholder="请输入电话号码">
                                     </div> 
                                     <button type="button" class="btn btn-primary" id="addphone"><i class="fa fa-plus" aria-hidden="true"></i> 添加电话</button>
                                 </li>
@@ -80,7 +72,7 @@
                             <select class="form-control getPCD" id="allCity" name="cityid" >
                                 <!-- <option value="120100"></option> -->
                             </select>
-                            <select class="form-control getPCD" id="allArea" name="districtid " >
+                            <select class="form-control getPCD" id="allArea" name="districtid" >
                                 <!-- <option value="120101"></option> -->
                             </select>
                         </td>
@@ -90,13 +82,12 @@
                         <td align="center">详细地址</td>
                         <td><input type="text" name="address" id="company_address" class="form-control" value="" datatype="*" nullmsg="请输入详细地址" placeholder="请输入详细地址"></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td align="center">开户时间</td>
                         <td>
                             <input type="text" name="openaccounttime" id="startTime" value="" class="form-control jcDate form_datetime dataInput" datatype="*" nullmsg="请选择开户日期" placeholder="请选择开户日期" style="width:33.03%"/>
                         </td>
-                        
-                    </tr>
+                    </tr> -->
                     <tr>
                         <td align="center">截止时间</td>
                         <td>
@@ -111,7 +102,7 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
-                            <button type="button" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i> 添加</button>
+                            <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check" aria-hidden="true"></i> 添加</button>
                             <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times" aria-hidden="true"></i> 取消</button>
                         </td>
                     </tr>
@@ -123,11 +114,10 @@
 
 </body>
 <script>
-    // var token = sessionStorage.getItem("token");
-    // $("#authToken").val(token);
     $(".form_datetime").datetimepicker({
         format: 'yyyy-mm-dd hh:ii',//显示格式
         todayHighlight: 1,//今天高亮
+        startDate:new Date(), //设置开始时间
         minTime: '10',
         startView:2,
         forceParse: 0,
