--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -23,17 +23,19 @@
                 <tbody>
                     <tr>
                         <td align="center">角色名称</td>
-                        <td><input type="text" name="roleName" value="" class="form-control" datatype="*1-50" errormsg="最多填写50个字符串" nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
+                        <td><input type="text" name="roleName" value="" class="form-control" datatype="*1-50" errormsg="最多填写50个字符串"
+                                nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
                     </tr>
                     <tr>
                         <td align="center">请选择角色权限</td>
                         <td id="menuList">
-                            <!-- <label style="margin-right:1%"><input type="checkbox" name="menuIds[]" value="公司管理"/>公司管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" name="menuIds[]" value="客户管理"/>客户管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" name="menuIds[]" value="用户管理"/>用户管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" name="menuIds[]" value="人员管理"/>人员管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" name="menuIds[]" value="角色管理"/>角色管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" name="menuIds[]" value="权限管理"/>权限管理</label> -->
+                            <input type="hidden" name="menuIds" id="formMenuIds" value="">
+                            <!-- <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox"  value="公司管理"/>公司管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="客户管理"/>客户管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="用户管理"/>用户管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="人员管理"/>人员管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="角色管理"/>角色管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="权限管理"/>权限管理</label> -->
                         </td>
                     </tr>
                     <tr>
