--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -23,7 +23,7 @@
                 <tbody>
                     <tr>
                         <td align="center">账号</td>
-                        <td><input type="text" name="account" ajaxurl="" id="company_account" value="" class="form-control" datatype="*" nullmsg="请输入帐号" placeholder="请输入帐号"></td>
+                        <td><input type="text" name="account" id="company_account" value="" class="form-control" datatype="*" nullmsg="请输入帐号" placeholder="请输入帐号"></td>
                     </tr>
 
                     <tr>
@@ -43,7 +43,7 @@
                     <tr>
                         <td align="center">联系人方式</td>
                         <td colspan="4" style="padding-top:8px;" id="addTelText">
-                            <input type="hidden" name="phones" id="formPhones" value="">
+                            <input type="hidden" name="phones" id="formPhones" value=""/>
                             <ul>
                                 <li class="pro-section">
                                     <div class="input-group">
@@ -88,12 +88,12 @@
                             <input type="text" name="openaccounttime" id="startTime" value="" class="form-control jcDate form_datetime dataInput" datatype="*" nullmsg="请选择开户日期" placeholder="请选择开户日期" style="width:33.03%"/>
                         </td>
                     </tr> -->
-                    <tr>
+                    <!-- <tr>
                         <td align="center">截止时间</td>
                         <td>
                             <input type="text" name="deadline" value="" id="overTime" class="form-control jcDate form_datetime dataInput" datatype="*" nullmsg="请选择截止日期" placeholder="请选择截止日期" style="width:33.03%"/>
                         </td>
-                    </tr>
+                    </tr> -->
                     <tr>
                         <td align="center">最终账号数量</td>
                         <td><input type="number" name="lastAccountCount" id="company_num" value="" class="form-control" datatype="*" nullmsg="请输入最终账号数量" placeholder="请输入最终账号数量"/></td>
