--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -18,8 +18,7 @@
 
     <div class="add-box">
         <form class="addForm" id="form1" name="form1" action="">
-            <input name="authToken " type="hidden" id="token" value="">
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+            <table width="100%" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
                         <td align="center">角色名称</td>
@@ -29,13 +28,12 @@
                     <tr>
                         <td align="center">请选择角色权限</td>
                         <td id="menuList">
-                            <input type="hidden" name="menuIds" id="formMenuIds" value="">
-                            <!-- <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox"  value="公司管理"/>公司管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="客户管理"/>客户管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="用户管理"/>用户管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="人员管理"/>人员管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="角色管理"/>角色管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value="权限管理"/>权限管理</label> -->
+                            <!-- <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox"  value=""/>公司管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>客户管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>用户管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>人员管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>角色管理</label>
+                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>权限管理</label> -->
                         </td>
                     </tr>
                     <tr>
