--- a/pages/AddPersonnel/index.html
+++ b/pages/AddPersonnel/index.html
@@ -46,7 +46,7 @@
             <td align="center">角色</td>
             <td>
               <!-- <input type="text" name="roleid" id="roleid" value="1" hidden> -->
-              <select class="form-control" name="roleid" id="roleid" datatype="*" nullmsg="请选择角色" placeholder="请选择角色" value='1'>
+              <select class="form-control" name="roleid" id="roleid"  placeholder="请选择角色" value='1'>
                 <option value="" selected>---请选择角色---</option>
               </select>
             </td>
