--- a/pages/PersonnelManage/index.html
+++ b/pages/PersonnelManage/index.html
@@ -43,7 +43,7 @@
 </tr>
 </thead>
 <tbody class="personnelList">
-<volist name="list" id="vo">
+<!-- <volist name="list" id="vo">
 <tr>
 <td><input type="checkbox" name="del_listID" id="del_listID" data-name="multi-select" value="<{$vo.id}>" /></td>
 <td><{$vo.id}></td>
@@ -56,7 +56,7 @@
 <td><{$vo.condition}></td>
 <td><a class="btn btn-danger" data-table="user" data-id="59" data-status="0" data-text1="禁用" data-text2="启用" href="javascript:void(0);">禁用</a></td>
 </tr>
-</volist>
+</volist> -->
 </tbody>
 </table>
 
