--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -25,35 +25,35 @@
                 <tbody>
                     <tr>
                         <td align="center">登录名</td>
-                        <td><input type="text" name="loginname" id="business_login_name" class="form-control" axjaurl="" datatype="s5-16" errormsg="昵称至少5个字符,最多16个字符！" nullmsg="请输入用户登录名" placeholder="请输入用户登录名"></td>
+                        <td><input type="text" name="loginname" id="user_loginname" class="form-control" axjaurl="" datatype="s5-16" errormsg="昵称至少5个字符,最多16个字符！" nullmsg="请输入用户登录名" placeholder="请输入用户登录名"></td>
                     </tr>
 
                     <tr>
                         <td align="center">姓名</td>
-                        <td><input type="text" name="name" id="business_name" class="form-control" datatype="*"  nullmsg="请输入用户姓名" placeholder="请输入用户姓名"></td>
+                        <td><input type="text" name="name" id="user_name" class="form-control" datatype="*"  nullmsg="请输入用户姓名" placeholder="请输入用户姓名"></td>
                     </tr>
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="password" name="passwd" id="business_passwd" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间" nullmsg="请输入密码" placeholder="请输入密码"></td>
+                        <td><input type="password" name="passwd" id="user_passwd" class="form-control" datatype="*6-15" errormsg="密码范围在6~15位之间" nullmsg="请输入密码" placeholder="请输入密码"></td>
                     </tr>
 
                     <tr>
                         <td align="center">性别</td>
                         <td>
-                            <input type="radio" value="男" name="gender" checked/>男
-                            <input type="radio" value="女" name="gender"/>女
+                            <input type="radio" value="男" name="gender" class='gender' checked/>男
+                            <input type="radio" value="女" name="gender" class='gender'/>女
                         </td>
                     </tr>
                     
                     <tr>
                         <td align="center">手机号</td>
-                        <td><input type="text" name="phone" id="phone" class="form-control" datatype="m" errormsg="手机号格式不正确！" nullmsg="请输入手机号" placeholder="请输入手机号"></td>
+                        <td><input type="text" name="phone" id="user_phone" class="form-control" datatype="m" errormsg="手机号格式不正确！" nullmsg="请输入手机号" placeholder="请输入手机号"></td>
                     </tr>
 
                     <tr>
                         <td align="center">微信</td>
-                        <td><input type="text" name="wechat" id="wechat" class="form-control" datatype="*"  nullmsg="请输入微信号" placeholder="请输入微信号"></td>
+                        <td><input type="text" name="wechat" id="user_wechat" class="form-control" datatype="*"  nullmsg="请输入微信号" placeholder="请输入微信号"></td>
                     </tr>
 
                     <tr>
@@ -70,7 +70,7 @@
 
                     <tr>
                         <td align="center">email</td>
-                        <td><input type="email" name="email" id="email" class="form-control" datatype="e" errormsg="邮箱格式不正确！"  nullmsg="请输入邮箱" placeholder="请输入邮箱"></td>
+                        <td><input type="email" name="email" id="user_email" class="form-control" datatype="e" errormsg="邮箱格式不正确！"  nullmsg="请输入邮箱" placeholder="请输入邮箱"></td>
                     </tr>
 
                     <tr>
@@ -93,7 +93,7 @@
 
                     <tr>
                         <td align="center">地址</td>
-                        <td><input type="text" name="address" id="address" class="form-control"  placeholder="请输入地址"></td>
+                        <td><input type="text" name="address" id="user_address" class="form-control"  placeholder="请输入地址"></td>
                     </tr>
                     
                     <tr>
