--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -19,6 +19,7 @@
 
     <div class="add-box">
         <form class="addForm" id="form1" name="form1" action="">
+            <input type="hidden" name="id" value="" id="companyId"/>
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
@@ -44,7 +45,7 @@
                         <td align="center">联系人方式</td>
                         <td colspan="4" style="padding-top:8px;" id="addTelText">
                             <input type="hidden" name="phones" id="formPhones" value=""/>
-                            <ul>
+                            <ul id="phoneList">
                                 <li class="pro-section">
                                     <div class="input-group">
                                         <input type="text" class="form-control formPhone" value="" id="attrPhone" placeholder="请输入电话号码">
