--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="/css/rightCommon.css">
     <script src="./companyList.js"></script>
     <script src="/js/moment.js"></script>
+    <script>
+        $.closeLoading();
+    </script>
 </head>
 
 <body>
