--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -22,8 +22,8 @@
                 <tbody>
                     <tr>
                         <td align="center">角色名称</td>
-                        <td><input type="text" name="roleName" value="" class="form-control" datatype="*1-50" errormsg="最多填写50个字符串"
-                                nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
+                        <td><input type="text" name="roleName" value="" class="form-control" id="roleName" datatype="*1-50"
+                                errormsg="最多填写50个字符串" nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
                     </tr>
                     <tr>
                         <td align="center">请选择角色权限</td>
