--- a/pages/StageManage/index.html
+++ b/pages/StageManage/index.html
@@ -7,6 +7,9 @@
     <script src="/js/load.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
     <script src="./stageMange.js"></script>
+    <script>
+        $.closeLoading();
+    </script>
 </head>
 
 <body>
@@ -15,9 +18,11 @@
             <a class="navbar-brand" href="#">阶段管理</a>
         </div>
         <div>
-            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/permission/deleteStage','GET','stageIds')"><i class="fas fa-trash-alt"></i>删除</button>
+            <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/permission/deleteStage','GET','stageIds')"><i
+                    class="fas fa-trash-alt"></i>删除</button>
             <!-- <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('add')"><i class="fas fa-edit"></i>修改</button> -->
-            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddStageManage/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
+            <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddStageManage/index.html')"><i
+                    class="fa fa-plus" aria-hidden="true"></i> 新建</button>
             <!-- <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
                     <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入编号搜索">
                     <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
