--- a/pages/BusinessDetail/index.html
+++ b/pages/BusinessDetail/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>商机列表</title>
     <script src="/js/load.js"></script>
+    <script src="/js/moment.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
 </head>
 
@@ -23,7 +24,7 @@
 
     <div class="list-box">
         <table width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tbody>
+            <tbody class="businessDetail">
                 <tr>
                     <td align="center">序号</td>
                     <td>01</td>
@@ -88,5 +89,5 @@
         </table>
     </div>
 </body>
-
+<script src="./businessDetail.js"></script>
 </html>
