--- a/pages/AddPersonnel/index.html
+++ b/pages/AddPersonnel/index.html
@@ -54,7 +54,7 @@
 
           <tr>
             <td align="center">账号</td>
-            <td><input type="text" name="account" id="account" class="form-control" value="12345" ></td>
+            <td><input type="text" name="account" id="account" class="form-control" value="" ></td>
           </tr>
 
           <tr>
