--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -99,19 +99,15 @@
         </table>
 
     </div>
-
-
-
-
     <ul class="pagination">
-        <li class="active"><a href="#">1</a></li>
+        <!-- <li class="active"><a href="#">1</a></li>
         <li><a href="/manage.php/Order/orderList/p/2.html">2</a></li>
         <li><a href="/manage.php/Order/orderList/p/3.html">3</a></li>
         <li><a href="/manage.php/Order/orderList/p/4.html">4</a></li>
         <li><a href="/manage.php/Order/orderList/p/5.html">5</a></li>
         <li><a href="/manage.php/Order/orderList/p/2.html">下一页</a></li>
         <li><a>共44条记录</a></li>
-        <li><a>第1页/共5页</a></li>
+        <li><a>第1页/共5页</a></li> -->
     </ul>
 
 </body>
