--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -18,6 +18,7 @@
 
     <div class="add-box">
         <form class="addForm" id="form1" name="form1" action="">
+            <input type="hidden" name="id" value="" id="roleId"/>
             <table width="100%" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
