--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -48,6 +48,9 @@
             cursor: pointer;
         }
     </style>
+    <script>
+        var ue = UE.getEditor('help_content');
+    </script>
 </head>
 
 <body>
